# toren

./: .env.example  .gitignore  .toren.kdl  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SEGMENTS.md  SEGMENT_SELECTOR.md  justfile  multi-ancillary-proof.md  test-multi-ancillary.sh  test-segments.sh  toren-test.toml  toren.toml  toren.toml.example
.toren/commands/: git-basic.yaml  jj-basic.yaml  npm-basic.yaml
ancillary/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
ancillary/src/: ancillary-runtime.ts  index.ts  segment-naming.ts  ship-client.ts
breq/: Cargo.toml
breq/src/: main.rs
contrib/plugins/: abort.rhai  assign.rhai  beads.rhai  complete.rhai
contrib/plugins/commands/: abort.rhai  assign.rhai  complete.rhai
contrib/plugins/tasks/: beads.rhai  github.rhai  linear.rhai  runes.rhai
daemon/: Cargo.toml
daemon/src/: ancillary.rs  caddy.rs  config.rs  main.rs  security.rs  segments.rs  workspace.rs
daemon/src/ancillary/: mod.rs  runtime.rs  work_log.rs
daemon/src/api/: ancillary_ws.rs  handlers.rs  mod.rs  ws_handler.rs
daemon/src/plugins/: mod.rs
daemon/src/services/: command.rs  filesystem.rs  mod.rs  vcs.rs
daemon/src/tasks/: beads.rs  mod.rs
docs/: ARCHITECTURE.md  CALCULATOR_KATA_RESULTS.md  CONCEPTS.md  JUSTFILE_GUIDE.md  NAMING.md  README.md  SEGMENTS.md  TOREN.md  configuration.md  env.md  plugins.md
examples/: hello-world-prompt.txt  toren.toml
lib/: Cargo.toml
lib/src/: agent.rs  alias.rs  assignment.rs  assignment_ops.rs  composite_status.rs  config.rs  lib.rs  process.rs  segments.rs  workspace.rs  workspace_setup.rs
lib/src/plugins/: builtin.rs  mod.rs  runtime.rs
lib/src/tasks/: beads.rs  mod.rs
scripts/: README.md  test-ancillary-work.sh  test-calculator-kata.ts  toren-cli.ts
station/: Cargo.toml  README.md
station/src/: caddy.rs  lib.rs  main.rs
web/: README.md  biome.json  package.json  pnpm-lock.yaml  vitest.config.ts
web/src/: app.css  app.html
web/src/lib/components/: BeadStatusIcon.svelte  ChatInterface.svelte  PairingModal.svelte  SegmentDropdown.svelte  SegmentSelector.svelte
web/src/lib/stores/: connection.test.ts  connection.ts  toren-status.test.ts  toren.test.ts  toren.ts
web/src/lib/types/: toren.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/a/[segment]/: +layout.svelte  +page.svelte
web/src/routes/a/[segment]/[unit]/: +page.svelte
web/src/test/: setup.ts
