[package]
name = "toren-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = "0.24"

# Async
futures = "0.3"
async-trait = "0.1"

# File watching
notify = "7.0"

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# Diff handling
similar = { version = "2.6", features = ["inline"] }

# Config
toml = "0.8"

# Random/crypto
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
glob = "0.3.3"
