[package]
name = "toren-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
toren-lib = { path = "../lib" }

# Claude Agent SDK for embedded ancillary runtime
claude-agent-sdk-rs = "0.5"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = "0.24"

# Async
futures = "0.3"
async-trait = "0.1"

# File watching
notify = "7.0"

# Process management
nix = { version = "0.29", features = ["process", "signal"] }

# Diff handling
similar = { version = "2.6", features = ["inline"] }

# HTTP client for Caddy admin API
reqwest = { version = "0.12", features = ["json"] }

# Config
toml = "0.8"

# Random/crypto
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
dirs = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
glob = "0.3.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
