[package]
name = "toren-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

toml = "0.8"
dirs = "6.0.0"
shellexpand = "3.1.1"
glob = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
kdl = "6.0"
minijinja = "2.5"
clonetree = "0.0.2"
