[package]
name = "station"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reverse proxy management CLI and SDK for local dev services"

[lib]
name = "station"

[[bin]]
name = "station"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6"
